# rugby_stats_scraper

./: .gitignore  Dockerfile  README.md  env.example  example.env  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  docker_build.yml
data/: espn_date_test.csv  espn_match_test.json  example.csv
rugby_stats_scraper/: constants.py  espn.py  s3.py  utils.py
tests/: data.py  test_espn.py  test_s3.py  test_utils.py
